--- a/bradAI_Video_Generator.ipynb
+++ b/bradAI_Video_Generator.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "BradAI: AI Story Video Generator:-\n",
+        "Vidify: AI Story Video Generator:-\n",
         "This notebook contains the complete code for the BradAI video generation pipeline. It uses a multi-stage AI process to transform a user's short story into a complete, narrated video with dynamic scenes and selectable art styles.\n",
         "\n",
         "How to Run:-\n",
