--- a/bradAI_Video_Generator.ipynb
+++ b/bradAI_Video_Generator.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "source": [
         "Vidify: AI Story Video Generator:-\n",
-        "This notebook contains the complete code for the BradAI video generation pipeline. It uses a multi-stage AI process to transform a user's short story into a complete, narrated video with dynamic scenes and selectable art styles.\n",
+        "This notebook contains the complete code for the Vidify video generation pipeline. It uses a multi-stage AI process to transform a user's short story into a complete, narrated video with dynamic scenes and selectable art styles.\n",
         "\n",
         "How to Run:-\n",
         "Add Your API Keys: On the left sidebar, click the key icon to open the Secrets Manager. You must add the following three secrets for the application to work:\n",
